# vibe-guard

./: .gitignore  .pre-commit-hooks.yaml  .vibeguard.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  _audit_checks.py  _audit_output.txt  _audit_verify.py  _count_tests.py  _test2.txt  action.yml  generate_report.py  pyproject.toml  score_output.txt  scratch_audit.py  vg-test-output.json  vg-test.sarif
.github/workflows/: ci.yml  dogfood.yml  publish.yml
docs/: RECORDING.md
src/vibeguard/: cli.py  config.py  detector.py  engine.py  models.py  scanner.py
src/vibeguard/ai/: __init__.py  autofix.py  client.py  context_filter.py  explain.py
src/vibeguard/commands/: __init__.py  fix.py  init.py  rules.py  score.py
src/vibeguard/data/: hallucinated_packages.json  osv_snapshot.json
src/vibeguard/plugins/: base.py  dotenv_scanner.py  mcp_config.py  prompt_injection.py  sca.py  secrets.py
src/vibeguard/reporters/: __init__.py  json_out.py  sarif.py  terminal.py
src/vibeguard/rules/dockerfile/: curl-pipe-bash.yaml  missing-user.yaml
src/vibeguard/rules/github-actions/: secret-echo.yaml  unpinned-action.yaml
src/vibeguard/rules/javascript/: client-side-auth.yaml  client-side-pricing.yaml  crlf-injection.yaml  csrf.yaml  ecb-mode.yaml  eval.yaml  graphql-injection.yaml  log-injection.yaml  math-random-security.yaml  missing-helmet.yaml  nosql-injection.yaml  open-redirect.yaml  pii-in-logs.yaml  prototype_pollution.yaml  secrets.yaml  sqli.yaml  supabase-service-role.yaml  xss.yaml
src/vibeguard/signals/: __init__.py  comments.py  structure.py  tokens.py
tests/: test_cli.py  test_detector.py  test_plan2_ai.py  test_plan2_plugins.py  test_reporters.py  test_scanner.py
tests/fixtures/: ai_sample.py  human_sample.py
tests/fixtures/vulnerable_app/: app.py  utils.py
(+42 files in other folders)
