[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "vibe-guard"
version = "0.1.0"
description = "Security scanner for AI-generated code"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "ahmbt", email = "ahmbt@example.com"},
]
keywords = [
  "security", "sast", "ai-security", "semgrep", "vibe-coding",
  "static-analysis", "pre-commit", "github-actions",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.12",
  "rich>=13.0",
  "PyYAML>=6.0",
  "semgrep>=1.50",
  "detect-secrets>=1.4",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "build>=1.0",
]

[project.scripts]
vibe-guard = "vibeguard.cli:app"

[project.urls]
Homepage = "https://github.com/ahmbt/vibe-guard"
Repository = "https://github.com/ahmbt/vibe-guard"
Issues = "https://github.com/ahmbt/vibe-guard/issues"
Changelog = "https://github.com/ahmbt/vibe-guard/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/vibeguard"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vibeguard --cov-report=term-missing -q"

[tool.coverage.run]
source = ["vibeguard"]
omit = ["tests/*"]
